# Digital-earth

./: .env.template  .gitattributes  .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  v0-remaining-layers.md
apps/api/: .coveragerc  alembic.ini  openapi.json  pyproject.toml
apps/api/migrations/: README  env.py
apps/api/migrations/versions/: 0f12a9b6c3d4_st0078_risk_poi_evaluations.py  21e9a72ac61b_merge_heads_products_risk_pois.py  2ae88d292b32_st0036_catalog_schema.py  2f3d78f91802_st_0062_seed_sample_products.py  38d43e1089d1_st0061_products_schema.py  (+4 more)
apps/api/src/: attribution_config.py  catalog_cache.py  config.py  db.py  editor_permissions.py  effect_presets_config.py  http_cache.py  legend_config.py  local_data_service.py  main.py  monitoring_analytics_index.py  observability.py  rate_limit.py  risk_engine.py  risk_intensity_config.py  risk_poi_import.py  risk_rules_config.py
apps/api/tests/: conftest.py  fake_redis.py  redis_fakes.py  test_analytics_api.py  test_attribution.py  test_catalog_cache.py  test_catalog_models.py  test_cldas_catalog_and_tiles.py  test_config.py  test_contract_openapi.py  test_db.py  test_ecmwf_run_times_catalog.py  test_ecmwf_run_vars_catalog.py  test_ecmwf_runs_catalog.py  test_ecmwf_vars_catalog.py  test_editor_permissions.py  test_effect_presets.py  test_effect_trigger_logs.py  test_errors.py  test_http_cache.py  test_ingest_runs.py  test_legend_config.py  test_legends_api.py  test_local_data.py  test_monitoring_analytics_index.py  test_observability.py  test_product_models.py  test_products_api.py  test_rate_limit.py  test_risk_engine.py  test_risk_engine_perf_config.py  test_risk_gzip.py  test_risk_intensity_mapping.py  test_risk_poi_evaluation_model.py  test_risk_poi_import.py  test_risk_poi_models.py  test_risk_pois_api.py  test_risk_rules.py  test_risk_rules_config.py  test_sample_api.py  (+3 more)
services/data-pipeline/: .coveragerc  coverage.xml  pyproject.toml
services/data-pipeline/config/: cldas_mapping.yaml  ecmwf_variables.yaml
services/data-pipeline/docs/: poc-terrain-production.md  st-0057-snow-statistics-metrics.md
services/data-pipeline/scripts/: batch_generate_ecmwf_tiles.py  batch_generate_multilevel_tiles.py  decode_datacube.py  generate_ecmwf_forecast_assets.py  inspect_datacube.py  poc_terrain_pipeline.py  run_snow_statistics.py
services/data-pipeline/src/: config.py  data_source.py  main.py
services/data-pipeline/tests/: conftest.py  test_archive.py  test_batch_generate_multilevel_tiles.py  test_bias_computation.py  test_bias_tiling.py  test_cldas_config.py  test_cldas_netcdf_hourly.py  test_cldas_tiling.py  test_cloud_density_derivation.py  test_cloud_tiling.py  test_config.py  test_datacube.py  test_demo_monitoring.py  test_ecmwf_config.py  test_ecmwf_downloader.py  test_humidity_tiling.py  test_local_data.py  test_precip_amount_tiling.py  test_precip_type.py  test_precipitation_diff.py  test_processing_precip_type.py  test_retention.py  test_scheduler.py  test_statistics_accumulator.py  test_statistics_config_storage.py  test_statistics_main_module.py  test_statistics_sources_batch_tiles_cli.py  test_statistics_time_windows.py  test_tcc_tiling.py  test_temperature_tiling.py  test_terrain_dem_downloader.py  test_terrain_mesh_generator.py  test_terrain_poc_pipeline_integration.py  test_terrain_tile_pyramid.py  test_tile_quality_validation.py  test_tile_scheduler.py  test_tiles_generate.py  test_tiles_generate_bias.py  test_tiling_config.py  test_tiling_integration.py  (+5 more)
(+443 files in other folders)
