[tool.poetry]
name = "digital-earth-api"
version = "0.1.0"
description = "Digital Earth API service"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
pyyaml = "^6.0.2"
redis = "^7.0.0"
xarray = "^2024.6.0"
h5netcdf = "^1.3.0"
h5py = "^3.11.0"
pillow = ">=10.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
