[tool.poetry]
name = "digital-earth-data-pipeline"
version = "0.1.0"
description = "Digital Earth data pipeline service"
packages = [{include = "ecmwf", from = "src"}, {include = "cldas", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov-config=services/data-pipeline/.coveragerc --cov-fail-under=90"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
